<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:layout_marginBottom="8.0dip">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_lab_remarks"
            style="@style/Outline_TextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dip"
        android:layout_marginBottom="8.0dip">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200.0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="10.0dip"
            android:hint="@string/server_lab_address3"
            style="@style/Outline_TextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_lab_port3"
            style="@style/Outline_TextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>